WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
255621
AX: role updates from HTML-AAM WPT failures
https://bugs.webkit.org/show_bug.cgi?id=255621
Summary
AX: role updates from HTML-AAM WPT failures
James Craig
Reported
2023-04-18 12:29:55 PDT
HTML-AAM role tests landed in WPT yesterday.
https://wpt.fyi/results/html-aam/roles.html?label=master&label=experimental&aligned
(Expand the "show details" switch if needed) Compare to the HTML-AAM spec here:
https://w3c.github.io/html-aam/
I think most of the "generic" vs "" are already resolved in the nightlies, but there are a few others remaining. Trying to list those here. # aside/footer/header WebKit maps these correctly in one context but not another. See differences where these are scoped to the body or main versus other contexts. Examples: -
https://w3c.github.io/html-aam/#el-aside
-
https://w3c.github.io/html-aam/#el-footer
-
https://w3c.github.io/html-aam/#el-header
# address/details/menu (should be group) -
https://w3c.github.io/html-aam/#el-address
-
https://w3c.github.io/html-aam/#el-details
-
https://w3c.github.io/html-aam/#el-group
# orphaned li (outside a list) - returning listitem; should be generic # dfn/dd/dt (term/definition) Might be resolved in nightly, along with others (em/strong/i/b/s/etc)?
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-18 12:30:10 PDT
<
rdar://problem/108216577
>
EWS
Comment 2
2023-11-21 10:03:09 PST
Committed
271021@main
(51444d307f7e): <
https://commits.webkit.org/271021@main
> Reviewed commits have been landed. Closing PR #20751 and removing active labels.
Tyler Wilcock
Comment 3
2023-11-21 10:26:42 PST
Reopened as the PR addresses a few of the needed fixes (address and fieldset), but not all.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug