expose `<address>` and `<fieldset>` as aria group https://bugs.webkit.org/show_bug.cgi?id=255621

Reviewed by Tyler Wilcock.

Address and Fieldset were incorrectly marked as "Group" which is a
generic AccessibilityRole that does not get exposed as the ARIA "Group"
role. The correct role to expose as "Group" is "ApplicationGroup".

This changes both address tags and fieldset tags to be
"ApplicationGroup".

Co-authored-by: Kate Higa <16447748+khiga8@users.noreply.github.com>
Co-authored-by: Lindsey Wild <35239154+lindseywild@users.noreply.github.com>

* LayoutTests/imported/w3c/web-platform-tests/html-aam/roles-expected.txt:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/html-aam/roles-expected.txt:
* LayoutTests/platform/mac-wk1/accessibility/roles-exposed-expected.txt:
* LayoutTests/platform/mac-wk2/accessibility/roles-exposed-expected.txt:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::determineAccessibilityRoleFromNode const):

Canonical link: https://commits.webkit.org/271021@main